# aws_benchmark_q-algorithms

./: .env.example  README.md  REFERENCE.md  dummy-config.yaml  pyproject.toml
.github/workflows/: overleaf.yaml  terraform.tf
QMonitor/logger/: logger.py
QMonitor/monitors/cloud/ec2/: ec2_monitor.py
src/: aws_version.py  classes.py  main.py
src/config/: credentials_config.py  master_config.py
src/logger/: logger.py
src/monitors/: error_codes.py
src/monitors/cloud/braket/: braket_monitor.py
src/monitors/cloud/ec2/: ec2_monitor.py
src/monitors/local/: local_monitor.py
test_logs/: ec2_monitor_test_2026-07-19 22:31:58.580203.md  ec2_monitor_test_2026-07-19 22:41:36.986597.md  monitor_test2026-07-18 15:38:08.044789.json  monitor_test_2026-07-18 15:40:16.318558.json  monitor_test_2026-07-18 15:43:50.096475.md  monitor_test_2026-07-18 15:45:40.274073.md  monitor_test_2026-07-18 15:48:13.729552.md  monitor_test_2026-07-19 22:17:19.709225.md  monitor_test_2026-07-19 22:25:20.851053.md  monitor_test_2026-07-19 22:25:51.384853.md  monitor_test_2026-07-19 22:42:09.407424.md  monitor_test_2026-07-19 22:42:27.158028.md  monitor_test_2026-07-19 22:42:44.688407.md
tests/integration/: braket_monitor_test.py  configure_test.py  ec2_monitor_test.py  integration_flow_test.py
tests/unit/: log_test.py  monitor_test.py
